trunk/Archive2/0d/0cfb26d4f98b0e/output
main.cpp: In function 'typename boost::fusion::result_of::invoke<mqtt::v1::make_buffer_sequence_impl, Sequence>::type mqtt::v1::make_buffer_sequence(Sequence&)':
main.cpp:29:9: error: 'mqtt::v1::make_buffer_sequence_impl' is not a template
         make_buffer_sequence_impl<boost::asio::mutable_buffer>(), sequence);
         ^
main.cpp: In function 'typename boost::fusion::result_of::invoke<mqtt::v1::make_buffer_sequence_impl, Sequence>::type mqtt::v1::make_buffer_sequence(const Sequence&)':
main.cpp:41:9: error: 'mqtt::v1::make_buffer_sequence_impl' is not a template
         make_buffer_sequence_impl<boost::asio::const_buffer>(), sequence);
         ^
